--- a/vue/demo/v-model.html
+++ b/vue/demo/v-model.html
@@ -8,7 +8,7 @@
 <body>
 <!--双向绑定-->
 <div id="app">
-    <input v-model="message">
+    <input type="text" v-model="message">
     <p>{{message}}</p>
 </div>
 
